Year 3/Compilers/DecafParser.py
# Generated from Decaf.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class DecafParser ( Parser ):

    grammarFileName = "Decaf.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'class'", "'callout'", "'Program'", "'{'", 
                     "'}'", "'['", "']'", "'('", "')'", "';'", "','", "'.'", 
                     "'\"'", "'''", "'\\'", "'?'", "':'", "'void'", "'boolean'", 
                     "'int'", "'0x'", "'true'", "'false'", "'if'", "'else'", 
                     "'for'", "'break'", "'continue'", "'return'", "'='", 
                     "'!'", "'-'", "'+'", "'*'", "'/'", "'%'", "'=='", "'!='", 
                     "'&&'", "'||'", "'+='", "'-='", "'<'", "'>'", "'<='", 
                     "'>='" ]

    symbolicNames = [ "<INVALID>", "CLASS", "CALLOUT", "PROGRAM", "LCURLY", 
                      "RCURLY", "LSQUARE", "RSQUARE", "LBRACK", "RBRACK", 
                      "ENDCOLON", "COMMA", "ENDPERIOD", "DOUBLEQUOTES", 
                      "QUOTE", "SLASH", "QUESTIONMARK", "COLON", "VOID", 
                      "BOOL", "INT", "HEX", "TRUE", "FALSE", "IF", "ELSE", 
                      "FOR", "BREAK", "CONTINUE", "RETURN", "EQUAL", "NOT", 
                      "MINUS", "ADD", "MULTIPLY", "DIVISION", "MODULOS", 
                      "EQUALSEQUALS", "NOTEQUAL", "ANDAND", "OROR", "PLUSEQUAL", 
                      "MINUSEQUAL", "LESS", "GREATER", "LESSEQUALS", "GREATEREQUALS", 
                      "WHITESPACE", "CODECOMMENTS", "CHAR", "ID", "HEXCHAR", 
                      "HEXDIGIT", "DECIMAL_LITERAL", "HEX_LITERAL" ]

    RULE_program = 0
    RULE_field_name = 1
    RULE_field_decl = 2
    RULE_method_decl = 3
    RULE_var_decl = 4
    RULE_block = 5
    RULE_data_type = 6
    RULE_statement = 7
    RULE_assign_op = 8
    RULE_method_name = 9
    RULE_method_call = 10
    RULE_location = 11
    RULE_expr = 12
    RULE_string_literal = 13
    RULE_callout_arg = 14
    RULE_bin_op = 15
    RULE_arith_op = 16
    RULE_rel_op = 17
    RULE_eq_op = 18
    RULE_cond_op = 19
    RULE_literal = 20
    RULE_int_literal = 21
    RULE_bool_literal = 22
    RULE_char_literal = 23

    ruleNames =  [ "program", "field_name", "field_decl", "method_decl", 
                   "var_decl", "block", "data_type", "statement", "assign_op", 
                   "method_name", "method_call", "location", "expr", "string_literal", 
                   "callout_arg", "bin_op", "arith_op", "rel_op", "eq_op", 
                   "cond_op", "literal", "int_literal", "bool_literal", 
                   "char_literal" ]

    EOF = Token.EOF
    CLASS=1
    CALLOUT=2
    PROGRAM=3
    LCURLY=4
    RCURLY=5
    LSQUARE=6
    RSQUARE=7
    LBRACK=8
    RBRACK=9
    ENDCOLON=10
    COMMA=11
    ENDPERIOD=12
    DOUBLEQUOTES=13
    QUOTE=14
    SLASH=15
    QUESTIONMARK=16
    COLON=17
    VOID=18
    BOOL=19
    INT=20
    HEX=21
    TRUE=22
    FALSE=23
    IF=24
    ELSE=25
    FOR=26
    BREAK=27
    CONTINUE=28
    RETURN=29
    EQUAL=30
    NOT=31
    MINUS=32
    ADD=33
    MULTIPLY=34
    DIVISION=35
    MODULOS=36
    EQUALSEQUALS=37
    NOTEQUAL=38
    ANDAND=39
    OROR=40
    PLUSEQUAL=41
    MINUSEQUAL=42
    LESS=43
    GREATER=44
    LESSEQUALS=45
    GREATEREQUALS=46
    WHITESPACE=47
    CODECOMMENTS=48
    CHAR=49
    ID=50
    HEXCHAR=51
    HEXDIGIT=52
    DECIMAL_LITERAL=53
    HEX_LITERAL=54

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(DecafParser.CLASS, 0)

        def PROGRAM(self):
            return self.getToken(DecafParser.PROGRAM, 0)

        def LCURLY(self):
            return self.getToken(DecafParser.LCURLY, 0)

        def RCURLY(self):
            return self.getToken(DecafParser.RCURLY, 0)

        def EOF(self):
            return self.getToken(DecafParser.EOF, 0)

        def field_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafParser.Field_declContext)
            else:
                return self.getTypedRuleContext(DecafParser.Field_declContext,i)


        def method_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafParser.Method_declContext)
            else:
                return self.getTypedRuleContext(DecafParser.Method_declContext,i)


        def getRuleIndex(self):
            return DecafParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = DecafParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48
            self.match(DecafParser.CLASS)
            self.state = 49
            self.match(DecafParser.PROGRAM)
            self.state = 50
            self.match(DecafParser.LCURLY)
            self.state = 54
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 51
                    self.field_decl() 
                self.state = 56
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

            self.state = 60
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DecafParser.VOID) | (1 << DecafParser.BOOL) | (1 << DecafParser.INT))) != 0):
                self.state = 57
                self.method_decl()
                self.state = 62
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 63
            self.match(DecafParser.RCURLY)
            self.state = 64
            self.match(DecafParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Field_nameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(DecafParser.ID, 0)

        def LSQUARE(self):
            return self.getToken(DecafParser.LSQUARE, 0)

        def int_literal(self):
            return self.getTypedRuleContext(DecafParser.Int_literalContext,0)


        def RSQUARE(self):
            return self.getToken(DecafParser.RSQUARE, 0)

        def getRuleIndex(self):
            return DecafParser.RULE_field_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterField_name" ):
                listener.enterField_name(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitField_name" ):
                listener.exitField_name(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitField_name" ):
                return visitor.visitField_name(self)
            else:
                return visitor.visitChildren(self)




    def field_name(self):

        localctx = DecafParser.Field_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_field_name)
        try:
            self.state = 72
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 66
                self.match(DecafParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 67
                self.match(DecafParser.ID)
                self.state = 68
                self.match(DecafParser.LSQUARE)
                self.state = 69
                self.int_literal()
                self.state = 70
                self.match(DecafParser.RSQUARE)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Field_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def data_type(self):
            return self.getTypedRuleContext(DecafParser.Data_typeContext,0)


        def field_name(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafParser.Field_nameContext)
            else:
                return self.getTypedRuleContext(DecafParser.Field_nameContext,i)


        def ENDCOLON(self):
            return self.getToken(DecafParser.ENDCOLON, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(DecafParser.COMMA)
            else:
                return self.getToken(DecafParser.COMMA, i)

        def getRuleIndex(self):
            return DecafParser.RULE_field_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterField_decl" ):
                listener.enterField_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitField_decl" ):
                listener.exitField_decl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitField_decl" ):
                return visitor.visitField_decl(self)
            else:
                return visitor.visitChildren(self)




    def field_decl(self):

        localctx = DecafParser.Field_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_field_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.data_type()
            self.state = 75
            self.field_name()
            self.state = 80
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==DecafParser.COMMA:
                self.state = 76
                self.match(DecafParser.COMMA)
                self.state = 77
                self.field_name()
                self.state = 82
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 83
            self.match(DecafParser.ENDCOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Method_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(DecafParser.ID)
            else:
                return self.getToken(DecafParser.ID, i)

        def LBRACK(self):
            return self.getToken(DecafParser.LBRACK, 0)

        def RBRACK(self):
            return self.getToken(DecafParser.RBRACK, 0)

        def block(self):
            return self.getTypedRuleContext(DecafParser.BlockContext,0)


        def data_type(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafParser.Data_typeContext)
            else:
                return self.getTypedRuleContext(DecafParser.Data_typeContext,i)


        def VOID(self):
            return self.getToken(DecafParser.VOID, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(DecafParser.COMMA)
            else:
                return self.getToken(DecafParser.COMMA, i)

        def getRuleIndex(self):
            return DecafParser.RULE_method_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethod_decl" ):
                listener.enterMethod_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethod_decl" ):
                listener.exitMethod_decl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethod_decl" ):
                return visitor.visitMethod_decl(self)
            else:
                return visitor.visitChildren(self)




    def method_decl(self):

        localctx = DecafParser.Method_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_method_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [DecafParser.BOOL, DecafParser.INT]:
                self.state = 85
                self.data_type()
                pass
            elif token in [DecafParser.VOID]:
                self.state = 86
                self.match(DecafParser.VOID)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 89
            self.match(DecafParser.ID)
            self.state = 90
            self.match(DecafParser.LBRACK)

            self.state = 102
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==DecafParser.BOOL or _la==DecafParser.INT:
                self.state = 91
                self.data_type()
                self.state = 92
                self.match(DecafParser.ID)
                self.state = 99
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==DecafParser.COMMA:
                    self.state = 93
                    self.match(DecafParser.COMMA)
                    self.state = 94
                    self.data_type()
                    self.state = 95
                    self.match(DecafParser.ID)
                    self.state = 101
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 104
            self.match(DecafParser.RBRACK)
            self.state = 105
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def data_type(self):
            return self.getTypedRuleContext(DecafParser.Data_typeContext,0)


        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(DecafParser.ID)
            else:
                return self.getToken(DecafParser.ID, i)

        def ENDCOLON(self):
            return self.getToken(DecafParser.ENDCOLON, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(DecafParser.COMMA)
            else:
                return self.getToken(DecafParser.COMMA, i)

        def getRuleIndex(self):
            return DecafParser.RULE_var_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_decl" ):
                listener.enterVar_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_decl" ):
                listener.exitVar_decl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_decl" ):
                return visitor.visitVar_decl(self)
            else:
                return visitor.visitChildren(self)




    def var_decl(self):

        localctx = DecafParser.Var_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_var_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.data_type()
            self.state = 108
            self.match(DecafParser.ID)
            self.state = 113
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==DecafParser.COMMA:
                self.state = 109
                self.match(DecafParser.COMMA)
                self.state = 110
                self.match(DecafParser.ID)
                self.state = 115
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 116
            self.match(DecafParser.ENDCOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LCURLY(self):
            return self.getToken(DecafParser.LCURLY, 0)

        def RCURLY(self):
            return self.getToken(DecafParser.RCURLY, 0)

        def var_decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafParser.Var_declContext)
            else:
                return self.getTypedRuleContext(DecafParser.Var_declContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafParser.StatementContext)
            else:
                return self.getTypedRuleContext(DecafParser.StatementContext,i)


        def getRuleIndex(self):
            return DecafParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = DecafParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(DecafParser.LCURLY)
            self.state = 122
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==DecafParser.BOOL or _la==DecafParser.INT:
                self.state = 119
                self.var_decl()
                self.state = 124
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 128
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DecafParser.CALLOUT) | (1 << DecafParser.LCURLY) | (1 << DecafParser.IF) | (1 << DecafParser.FOR) | (1 << DecafParser.BREAK) | (1 << DecafParser.CONTINUE) | (1 << DecafParser.RETURN) | (1 << DecafParser.ID))) != 0):
                self.state = 125
                self.statement()
                self.state = 130
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 131
            self.match(DecafParser.RCURLY)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Data_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(DecafParser.INT, 0)

        def BOOL(self):
            return self.getToken(DecafParser.BOOL, 0)

        def getRuleIndex(self):
            return DecafParser.RULE_data_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterData_type" ):
                listener.enterData_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitData_type" ):
                listener.exitData_type(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitData_type" ):
                return visitor.visitData_type(self)
            else:
                return visitor.visitChildren(self)




    def data_type(self):

        localctx = DecafParser.Data_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_data_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            _la = self._input.LA(1)
            if not(_la==DecafParser.BOOL or _la==DecafParser.INT):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def location(self):
            return self.getTypedRuleContext(DecafParser.LocationContext,0)


        def assign_op(self):
            return self.getTypedRuleContext(DecafParser.Assign_opContext,0)


        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafParser.ExprContext)
            else:
                return self.getTypedRuleContext(DecafParser.ExprContext,i)


        def ENDCOLON(self):
            return self.getToken(DecafParser.ENDCOLON, 0)

        def method_call(self):
            return self.getTypedRuleContext(DecafParser.Method_callContext,0)


        def IF(self):
            return self.getToken(DecafParser.IF, 0)

        def LBRACK(self):
            return self.getToken(DecafParser.LBRACK, 0)

        def RBRACK(self):
            return self.getToken(DecafParser.RBRACK, 0)

        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DecafParser.BlockContext)
            else:
                return self.getTypedRuleContext(DecafParser.BlockContext,i)


        def ELSE(self):
            return self.getToken(DecafParser.ELSE, 0)

        def FOR(self):
            return self.getToken(DecafParser.FOR, 0)

        def ID(self):
            return self.getToken(DecafParser.ID, 0)

        def EQUAL(self):
            return self.getToken(DecafParser.EQUAL, 0)

        def COMMA(self):
            return self.getToken(DecafParser.COMMA, 0)

        def RETURN(self):
            return self.getToken(DecafParser.RETURN, 0)

        def BREAK(self):
            return self.getToken(DecafParser.BREAK, 0)

        def CONTINUE(self):
            return self.getToken(DecafParser.CONTINUE, 0)

        def getRuleIndex(self):
            return DecafParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = DecafParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.state = 170
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 135
                self.location()
                self.state = 136
                self.assign_op()
                self.state = 137
                self.expr(0)
                self.state = 138
                self.match(DecafParser.ENDCOLON)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 140
                self.method_call()
                self.state = 141
                self.match(DecafParser.ENDCOLON)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 143
                self.match(DecafParser.IF)
                self.state = 144
                self.match(DecafParser.LBRACK)
                self.state = 145
                self.expr(0)
                self.state = 146
                self.match(DecafParser.RBRACK)
                self.state = 147
                self.block()
                self.state = 150
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==DecafParser.ELSE:
                    self.state = 148
                    self.match(DecafParser.ELSE)
                    self.state = 149
                    self.block()


                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 152
                self.match(DecafParser.FOR)
                self.state = 153
                self.match(DecafParser.ID)
                self.state = 154
                self.match(DecafParser.EQUAL)
                self.state = 155
                self.expr(0)
                self.state = 156
                self.match(DecafParser.COMMA)
                self.state = 157
                self.expr(0)
                self.state = 158
                self.block()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 160
                self.match(DecafParser.RETURN)
                self.state = 162
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DecafParser.CALLOUT) | (1 << DecafParser.LBRACK) | (1 << DecafParser.TRUE) | (1 << DecafParser.FALSE) | (1 << DecafParser.NOT) | (1 << DecafParser.MINUS) | (1 << DecafParser.CHAR) | (1 << DecafParser.ID) | (1 << DecafParser.DECIMAL_LITERAL) | (1 << DecafParser.HEX_LITERAL))) != 0):
                    self.state = 161
                    self.expr(0)


                self.state = 164
                self.match(DecafParser.ENDCOLON)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 165
                self.match(DecafParser.BREAK)
                self.state = 166
                self.match(DecafParser.ENDCOLON)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 167
                self.match(DecafParser.CONTINUE)
                self.state = 168
                self.match(DecafParser.ENDCOLON)
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 169
                self.block()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Assign_opContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EQUAL(self):
            return self.getToken(DecafParser.EQUAL, 0)

        def PLUSEQUAL(self):
            return self.getToken(DecafParser.PLUSEQUAL, 0)

        def MINUSEQUAL(self):
            return self.getToken(DecafParser.MINUSEQUAL, 0)

        def getRuleIndex(self):
            return DecafParser.RULE_assign_op

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssign_op" ):
                listener.enterAssign_op(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssign_op" ):
                listener.exitAssign_op(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssign_op" ):
                return visitor.visitAssign_op(self)
            else:
                return visitor.visitChildren(self)




    def assign_op(self):

        localctx = DecafParser.Assign_opContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_assign_op)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 172
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << DecafParser.EQUAL) | (1 << DecafParser.PLUSEQUAL) | (1 << DecafParser.MINUSEQUAL))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Method_nameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(DecafParser.ID, 0)

        def getRuleIndex(self):
            return DecafParser.RULE_method_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethod_name" ):
                listener.enterMethod_name(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethod_name" ):
                listener.exitMethod_name(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethod_name" ):
                return visitor.visitMethod_name(self)
            else:
                return visitor.visitChildren(self)




    def method_name(self):

        localctx = DecafParser.Method_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_method_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 174
            self.match(DecafParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Method_callContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def method_name(self):
            return self.getTypedRuleContext(DecafParser.Method_nameContext,0)

